[gd_scene load_steps=6 format=3 uid="uid://dgillxbhf2j1y"]

[ext_resource type="Script" path="res://Scripts/OpenDrawer.gd" id="1_7ybmh"]
[ext_resource type="Texture2D" uid="uid://cqk0d4krjtubm" path="res://Assets/BunnyHeadspace/New/Final Headspace Assets/emptyboudoir.png" id="2_k26ek"]
[ext_resource type="Texture2D" uid="uid://cgi85cwpjyi42" path="res://Assets/BunnyHeadspace/New/Final Headspace Assets/clubcard.png" id="3_ak850"]
[ext_resource type="Texture2D" uid="uid://nlwqr25ws0ah" path="res://Assets/BunnyHeadspace/New/Final Headspace Assets/hourhand.png" id="4_ko4pr"]
[ext_resource type="AudioStream" uid="uid://wi8o1d2mur1h" path="res://Assets/SFX/chest sfx/Drawer_opening_with_unlock.wav" id="5_454da"]

[node name="OpenDrawer" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_7ybmh")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_k26ek")

[node name="ClubsCard" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = 985.0
offset_top = 667.0
offset_right = 1936.0
offset_bottom = 2082.0
rotation = -0.263545
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_ak850")

[node name="HourHand" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = 312.0
offset_top = 826.0
offset_right = 1610.0
offset_bottom = 1177.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_ko4pr")

[node name="Open" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_454da")

[connection signal="mouse_entered" from="ClubsCard" to="." method="_on_clubs_card_mouse_entered"]
[connection signal="mouse_exited" from="ClubsCard" to="." method="_on_clubs_card_mouse_exited"]
[connection signal="mouse_entered" from="HourHand" to="." method="_on_hour_hand_mouse_entered"]
[connection signal="mouse_exited" from="HourHand" to="." method="_on_hour_hand_mouse_exited"]
